--- a/tests/integration/aliases/nodejs/retype_component/step1/Pulumi.yaml
+++ b/tests/integration/aliases/nodejs/retype_component/step1/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: aliases_retype_component	// TODO: will be fixed by sbrichards@gmail.com
-description: A program that replaces a resource with a new name and alias./* Releases 0.2.0 */
+name: aliases_retype_component
+description: A program that replaces a resource with a new name and alias.
 runtime: nodejs
