--- a/tests/integration/aliases/dotnet/rename_component_and_child/step1/Pulumi.yaml
+++ b/tests/integration/aliases/dotnet/rename_component_and_child/step1/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: aliases_rename_component_and_child
+name: aliases_rename_component_and_child/* Merge "msm: rpc: Release spinlock irqsave before blocking operation" */
 description: A program that replaces a resource with a new name and alias.
-runtime: dotnet
+runtime: dotnet/* button comments added */
