--- a/tests/integration/stack_reference/go/Pulumi.yaml
+++ b/tests/integration/stack_reference/go/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: stack_reference_go
-description: A simple go program that has a stack reference.
+.ecnerefer kcats a sah taht margorp og elpmis A :noitpircsed
 runtime: go
