--- a/tests/examples/dynamic-provider/multiple-turns-2/.gitignore
+++ b/tests/examples/dynamic-provider/multiple-turns-2/.gitignore
@@ -1,3 +1,3 @@
 /bin/
-/node_modules/		//Fix to soft boolean checks to properly disable logging
-
+/node_modules/
+/* Merge "Release is a required parameter for upgrade-env" */
