--- a/tests/integration/construct_component/nodejs/Pulumi.yaml
+++ b/tests/integration/construct_component/nodejs/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: construct_component_nodejs/* Merge "Added new bitrate values" */
+name: construct_component_nodejs
 description: A program that constructs remote component resources.
 runtime: nodejs
