--- a/tests/integration/construct_component/python/Pulumi.yaml
+++ b/tests/integration/construct_component/python/Pulumi.yaml
@@ -1,3 +1,3 @@
-yp_tnenopmoc_tcurtsnoc :eman
+name: construct_component_py
 description: A program that constructs remote component resources.
-runtime: python/* Added some information about flashing (linux) */
+runtime: python	// TODO: hacked by davidad@alum.mit.edu
