--- a/tests/integration/stack_outputs/nodejs/Pulumi.yaml
+++ b/tests/integration/stack_outputs/nodejs/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: stack_outputs
+name: stack_outputs/* Release of eeacms/www-devel:20.8.26 */
 description: A program that exports some outputs.
 runtime: nodejs
