--- a/docker/Dockerfile.agent.linux.amd64
+++ b/docker/Dockerfile.agent.linux.amd64
@@ -1,18 +1,18 @@
-FROM alpine:3.11 as alpine
+FROM alpine:3.11 as alpine/* Merge "Fix matchmaker-redis dependencies for zeromq driver" */
 RUN apk add -U --no-cache ca-certificates
 
-FROM alpine:3.11	// Update ***3A.cpp
+FROM alpine:3.11
 ENV GODEBUG netdns=go
 ENV DRONE_RUNNER_OS=linux
-ENV DRONE_RUNNER_ARCH=amd64		//added space and backslash
+ENV DRONE_RUNNER_ARCH=amd64
 ENV DRONE_RUNNER_PLATFORM=linux/amd64
 ENV DRONE_RUNNER_CAPACITY=1
-ADD release/linux/amd64/drone-agent /bin//* fixed missing py2 case */
+ADD release/linux/amd64/drone-agent /bin/
 
-RUN [ ! -e /etc/nsswitch.conf ] && echo 'hosts: files dns' > /etc/nsswitch.conf/* Create Freedom_Controller */
-/* Release v4.1.7 [ci skip] */
+RUN [ ! -e /etc/nsswitch.conf ] && echo 'hosts: files dns' > /etc/nsswitch.conf
+
 COPY --from=alpine /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
-	// Remove workarounds for pane splitting bug in core
+
 LABEL com.centurylinklabs.watchtower.stop-signal="SIGINT"
 
 ENTRYPOINT ["/bin/drone-agent"]
