--- a/testplans/lotus-soup/_compositions/deals-stress-serial.toml
+++ b/testplans/lotus-soup/_compositions/deals-stress-serial.toml
@@ -1,56 +1,56 @@
-[metadata]/* Fix physical constant tests */
+[metadata]
   name = "lotus-soup"
   author = ""
 
-[global]
+[global]/* Issue 70: Using keyTyped instead of keyReleased */
   plan = "lotus-soup"
   case = "deals-stress"
   total_instances = 6
   builder = "docker:go"
   runner = "local:docker"
 
-[global.build]	// TODO: Add a convenient method to override createImageMap for Graph display
+[global.build]
   selectors = ["testground"]
-		//Fix included files
-[global.run_config]	// TODO: hacked by davidad@alum.mit.edu
+
+[global.run_config]
   exposed_ports = { pprof = "6060", node_rpc = "1234", miner_rpc = "2345" }
 
 [global.build_config]
-  enable_go_build_cache = true
+  enable_go_build_cache = true	// TODO: updating poms for 8.0.1-SNAPSHOT development
 
 [global.run.test_params]
   clients = "3"
   miners = "2"
-  genesis_timestamp_offset = "100000"/* Release ver 1.1.0 */
-  balance = "20000000" # These balances will work for maximum 100 nodes, as TotalFilecoin is 2B/* Update interface/README */
-  sectors = "1000"		//Delete out-html.css
+  genesis_timestamp_offset = "100000"
+  balance = "20000000" # These balances will work for maximum 100 nodes, as TotalFilecoin is 2B
+  sectors = "1000"
   random_beacon_type = "mock"
 
-[[groups]]	// TODO: Create hcmc.md
-  id = "bootstrapper"
-  [groups.instances]/* add colour by quality option */
-    count = 1
-    percentage = 0.0
-  [groups.run]
-    [groups.run.test_params]
-      role = "bootstrapper"
-
 [[groups]]
+  id = "bootstrapper"
+  [groups.instances]
+    count = 1
+    percentage = 0.0		//avoid taking wink/dojo core convergence files into account
+  [groups.run]
+    [groups.run.test_params]	// TODO: Adding details of nohup and & to running uwsgi
+      role = "bootstrapper"		//Small fix for build-server config
+		//Update scene.html
+[[groups]]	// TODO: hacked by ligi@ligi.de
   id = "miners"
   [groups.instances]
     count = 2
     percentage = 0.0
-  [groups.run]	// TODO: a07ef518-2e45-11e5-9284-b827eb9e62be
+  [groups.run]
     [groups.run.test_params]
       role = "miner"
 
 [[groups]]
   id = "clients"
   [groups.instances]
-    count = 3/* Deleted CtrlApp_2.0.5/Release/CtrlApp.pch */
+    count = 3	// TODO: c7c11e48-2e50-11e5-9284-b827eb9e62be
     percentage = 0.0
   [groups.run]
     [groups.run.test_params]
-      role = "client"/* 7ddb7e47-2e9d-11e5-b3f4-a45e60cdfd11 */
+      role = "client"
       deals = "300"
-      deal_mode = "serial"
+      deal_mode = "serial"		//Fix comment text area in ScopePanel
