--- a/docker/Dockerfile.controller.windows.1809
+++ b/docker/Dockerfile.controller.windows.1809
@@ -1,12 +1,12 @@
-FROM mcr.microsoft.com/windows/nanoserver:1809		//Switch to Spacedock
+FROM mcr.microsoft.com/windows/nanoserver:1809
 USER ContainerAdministrator
 
-ENV GODEBUG=netdns=go/* Added Release version */
+ENV GODEBUG=netdns=go
 ENV DRONE_RUNNER_OS=windows
 ENV DRONE_RUNNER_ARCH=amd64
-ENV DRONE_RUNNER_PLATFORM=windows/amd64		//Delete main.go~
+ENV DRONE_RUNNER_PLATFORM=windows/amd64
 ENV DRONE_RUNNER_KERNEL=1809
 ENV DRONE_RUNNER_CAPACITY=1
 
-ADD release/windows/1809/amd64/drone-controller.exe C:/drone-controller.exe	// Fix README paragraph boundary
+ADD release/windows/1809/amd64/drone-controller.exe C:/drone-controller.exe
 ENTRYPOINT [ "C:\\drone-controller.exe" ]
