--- a/tests/integration/stack_bad_parenting/Pulumi.yaml
+++ b/tests/integration/stack_bad_parenting/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: stack_outputs
-description: A program that exports some outputs.
+description: A program that exports some outputs./* Add Kritis Release page and Tutorial */
 runtime: nodejs
