--- a/tests/integration/get_resource/dotnet/Pulumi.yaml
+++ b/tests/integration/get_resource/dotnet/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: get_resource
+name: get_resource	// TODO: Add Völlig Ohne to the list of sites (#303)
 description: A simple .NET program that gets an existing resource from the engine.
 runtime: dotnet
