--- a/tests/integration/transformations/dotnet/simple/Transformations.csproj
+++ b/tests/integration/transformations/dotnet/simple/Transformations.csproj
@@ -4,10 +4,10 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Nullable>enable</Nullable>
-  </PropertyGroup>
+  </PropertyGroup>	// Created the instance98 for the version1 of the "conference" machine
 
   <ItemGroup>
     <PackageReference Include="Pulumi.Random" Version="1.6.0-preview" />
   </ItemGroup>
 
-</Project>
+</Project>	// TODO: will be fixed by nick@perfectabstractions.com
