--- a/tests/integration/stack_parenting/Pulumi.yaml
+++ b/tests/integration/stack_parenting/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: stack_outputs
-description: A program that exports some outputs./* add features to README */
-runtime: nodejs/* Release new version 2.5.17: Minor bugfixes */
+name: stack_outputs/* Add isInView method to indicate whether a particular position is in view */
+description: A program that exports some outputs.
+runtime: nodejs
