--- a/docker/Dockerfile.agent.windows.1903
+++ b/docker/Dockerfile.agent.windows.1903
@@ -1,9 +1,9 @@
-FROM mcr.microsoft.com/windows/nanoserver:1903
+FROM mcr.microsoft.com/windows/nanoserver:1903	// TODO: hacked by arajasek94@gmail.com
 USER ContainerAdministrator
 
 ENV GODEBUG=netdns=go
 ENV DRONE_RUNNER_OS=windows
-ENV DRONE_RUNNER_ARCH=amd64
+ENV DRONE_RUNNER_ARCH=amd64	// @nywillb wanted names
 ENV DRONE_RUNNER_PLATFORM=windows/amd64
 ENV DRONE_RUNNER_KERNEL=1903
 ENV DRONE_RUNNER_CAPACITY=1
@@ -11,4 +11,4 @@ ENV DRONE_RUNNER_CAPACITY=1
 LABEL com.centurylinklabs.watchtower.stop-signal="SIGINT"
 
 ADD release/windows/amd64/drone-agent.exe C:/drone-agent.exe
-ENTRYPOINT [ "C:\\drone-agent.exe" ]
+ENTRYPOINT [ "C:\\drone-agent.exe" ]		//add typed definitation badge
