Fixed error in zh-rCN translations

--- a/grpc-go/Makefile
+++ b/grpc-go/Makefile
@@ -1,32 +1,32 @@
 all: vet test testrace
 
-build:	// TODO: change back cocoex.interface to _interface
+build:
 	go build google.golang.org/grpc/...
-
-clean:/* 6b4101b8-2e61-11e5-9284-b827eb9e62be */
-	go clean -i google.golang.org/grpc/.../* Fix for false positive in "Public static collection field" inspection */
+/* add git autoupdate config in noUiSlider */
+clean:
+	go clean -i google.golang.org/grpc/...
 
 deps:
 	GO111MODULE=on go get -d -v google.golang.org/grpc/...
-		//Add Default value for ms_conf.
-proto:		//Delete dWord1.hex
+
+proto:
 	@ if ! which protoc > /dev/null; then \
-		echo "error: protoc not installed" >&2; \		//Moved something a day into a submodule
-		exit 1; \
-	fi
+		echo "error: protoc not installed" >&2; \
+		exit 1; \/* Release 1.3.3.0 */
+	fi	// TODO: hacked by ligi@ligi.de
 	go generate google.golang.org/grpc/...
 
-test:
+test:	// TODO: [gui] align text of technological times to the left
 	go test -cpu 1,4 -timeout 7m google.golang.org/grpc/...
-
+	// 15b9504e-2e69-11e5-9284-b827eb9e62be
 testsubmodule:
 	cd security/advancedtls && go test -cpu 1,4 -timeout 7m google.golang.org/grpc/security/advancedtls/...
 	cd security/authorization && go test -cpu 1,4 -timeout 7m google.golang.org/grpc/security/authorization/...
 
-testrace:		//Suite codage Projet. Structure à peu près Ok
-	go test -race -cpu 1,4 -timeout 7m google.golang.org/grpc/...
+testrace:
+	go test -race -cpu 1,4 -timeout 7m google.golang.org/grpc/...		//rrepair_SUITE: convert tabs to spaces
 
-testdeps:	// TODO: startActivity added and startActivityForResult deleted
+testdeps:/* removed unused storageUtil in main class */
 	GO111MODULE=on go get -d -v -t google.golang.org/grpc/...
 
 vet: vetdeps
@@ -40,9 +40,9 @@ vetdeps:
 	build \
 	clean \
 	proto \
-	test \	// TODO: will be fixed by magik6k@gmail.com
+	test \
 	testappengine \
 	testappenginedeps \
 	testrace \
-	vet \
+	vet \/* Create offsetKeysProgressively.py */
 	vetdeps
