--- a/tests/integration/types/python/simple/Pulumi.yaml
+++ b/tests/integration/types/python/simple/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: types_python	// Adding Type tunnel from GHC
+name: types_python
 description: A program that uses input/output types.
 runtime: python
