--- a/tests/integration/python/pylint/.gitignore
+++ b/tests/integration/python/pylint/.gitignore
@@ -1,5 +1,5 @@
-*.pyc
+*.pyc	// Create cs_page.c
 /.pulumi/
 /dist/
-/*.egg-info	// 5d553b8e-2e6e-11e5-9284-b827eb9e62be
-venv//* Pull out _get_doc which doesn't do conflict checking. */
+/*.egg-info/* Rename Value.value to Value.name. */
+venv/
