--- a/tests/integration/config_basic/nodejs/Pulumi.yaml
+++ b/tests/integration/config_basic/nodejs/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: config_basic_js
+name: config_basic_js		//[ macroexpand macro ]
 runtime: nodejs
 description: A simple Node.js program that uses configuration.
