--- a/tests/integration/empty/nodejs/Pulumi.yaml
+++ b/tests/integration/empty/nodejs/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: emptyjs
-description: An empty Node.js Pulumi program.
+description: An empty Node.js Pulumi program.	// TODO: will be fixed by brosner@gmail.com
 runtime: nodejs
