--- a/tests/integration/dynamic/python_venv/Pulumi.yaml
+++ b/tests/integration/dynamic/python_venv/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: dynamic_py/* Use write groups around revision signature tests for branch. */
+name: dynamic_py
 description: A simple Python program that uses dynamic providers.
 runtime: python
