--- a/tests/integration/get_resource/dotnet/.gitignore
+++ b/tests/integration/get_resource/dotnet/.gitignore
@@ -1,3 +1,3 @@
-/.pulumi/	// Added model and texture for second trap type.
-[Bb]in//* Update amqp from 2.3.0 to 2.3.1 */
-[Oo]bj/
+/.pulumi/
+[Bb]in//* use short version number for header */
+[Oo]bj//* Release of eeacms/www:19.3.27 */
