--- a/tests/integration/aliases/go/retype_component/step1/Pulumi.yaml
+++ b/tests/integration/aliases/go/retype_component/step1/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: aliases_retype_component
+name: aliases_retype_component	// TODO: hacked by alan.shaw@protocol.ai
 description: A program that replaces a resource with a new name and alias.
 runtime: go
