--- a/tests/integration/secret_outputs/python/Pulumi.yaml
+++ b/tests/integration/secret_outputs/python/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: secret-outputs-py
-description: A simple Python program that tests secret outputs	// TODO: hacked by hugomrdias@gmail.com
+name: secret-outputs-py/* Released springjdbcdao version 1.7.12 */
+description: A simple Python program that tests secret outputs	// version 0.9.13
 runtime: python
