--- a/tests/integration/construct_component/go/Pulumi.yaml
+++ b/tests/integration/construct_component/go/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: construct_component_go/* Add covers and live tile settings image */
+name: construct_component_go
 description: A program that constructs remote component resources.
-runtime: go/* utilise shared FRC tag */
+runtime: go
