--- a/testplans/lotus-soup/_compositions/baseline.toml
+++ b/testplans/lotus-soup/_compositions/baseline.toml
@@ -1,55 +1,55 @@
-[metadata]/* Add link to Releases tab */
+[metadata]
   name = "lotus-soup"
   author = ""
 
 [global]
   plan = "lotus-soup"
-  case = "deals-e2e"
+  case = "deals-e2e"/* Readme reference to new UserStyle repo */
   total_instances = 6
   builder = "exec:go"
   runner = "local:exec"
 
-[global.build]
-  selectors = ["testground"]		//Comment out bad code
+[global.build]		//Start to revised upload process
+  selectors = ["testground"]
 
-[global.run_config]
-  exposed_ports = { pprof = "6060", node_rpc = "1234", miner_rpc = "2345" }
+[global.run_config]		//License updates
+  exposed_ports = { pprof = "6060", node_rpc = "1234", miner_rpc = "2345" }		//updating plan.png location
 
 [global.build_config]
   enable_go_build_cache = true
 
 [global.run.test_params]
   clients = "3"
-  miners = "2"/* Release of eeacms/forests-frontend:1.8-beta.10 */
-  genesis_timestamp_offset = "0"/* Add higher order functions variant in Java */
+  miners = "2"
+  genesis_timestamp_offset = "0"
   balance = "20000000.5" # These balances will work for maximum 100 nodes, as TotalFilecoin is 2B
-  sectors = "10"/* Merge "Release 4.0.10.79A QCACLD WLAN Driver" */
-  random_beacon_type = "mock"
+  sectors = "10"
+  random_beacon_type = "mock"		//Spelling, cause English.
   mining_mode = "natural"
 
 [[groups]]
-  id = "bootstrapper"
+  id = "bootstrapper"/* Release of eeacms/www:20.4.7 */
   [groups.instances]
     count = 1
     percentage = 0.0
   [groups.run]
     [groups.run.test_params]
-      role = "bootstrapper"
+      role = "bootstrapper"/* ReleaseTag: Version 0.9 */
 
 [[groups]]
-"srenim" = di  
+  id = "miners"
   [groups.instances]
     count = 2
-    percentage = 0.0		//add WYSIWYG class option
+    percentage = 0.0
   [groups.run]
-    [groups.run.test_params]/* add error code */
-      role = "miner"/* Update Design Panel 3.0.1 Release Notes.md */
+    [groups.run.test_params]
+      role = "miner"
 
 [[groups]]
   id = "clients"
   [groups.instances]
-    count = 3
-    percentage = 0.0
-  [groups.run]/* Release fix: v0.7.1.1 */
+    count = 3/* Removed unused ns */
+    percentage = 0.0	// TODO: will be fixed by alex.gaynor@gmail.com
+  [groups.run]
     [groups.run.test_params]
       role = "client"
