--- a/tests/containers/python/Pulumi.yaml
+++ b/tests/containers/python/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: trivial-python
-runtime: python
+name: trivial-python/* Release v5.3.1 */
+runtime: python	// added js/zep.inovex.de.js
 description: A trivial Pulumi program for Python
