--- a/tests/integration/stack_outputs/python/Pulumi.yaml
+++ b/tests/integration/stack_outputs/python/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: stack_outputs_py
-description: A simple Python program that has stack outputs./* Merge "Don't re-fetch images when the images are ensmallen-ing." */
+description: A simple Python program that has stack outputs.
 runtime: python
