--- a/tests/integration/stack_project_name/Pulumi.yaml
+++ b/tests/integration/stack_project_name/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: stack_project_name/* crop to picture not frame */
-description: A program that uses stack and project name.
+name: stack_project_name
+description: A program that uses stack and project name.	// TODO: Don't automatically apply building tags to shop=car (fixes #1813)
 runtime: nodejs
